<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/aces"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/aces"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/razboi"
        android:textSize="50sp"
        android:id="@+id/razboi"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/aces"
        android:textStyle="bold"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playButton"
        android:text="@string/play"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/razboi"
        android:layout_marginTop="20dp"
        android:onClick="onClickPlay"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rulesButton"
        android:text="@string/rules"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/playButton"
        android:layout_marginTop="20dp"
        android:onClick="onClickRules"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exitButton"
        android:text="@string/exit"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rulesButton"
        android:layout_marginTop="20dp"
        android:onClick="onClickExit"/>
</RelativeLayout>