<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:id="@+id/card1"
        android:src="@drawable/blue_back"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/card1"
        android:layout_toRightOf="@+id/card1"
        android:layout_marginLeft="150dp"
        android:id="@+id/card2"
        android:src="@drawable/blue_back"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/giveCard1"
        android:text="@string/daCarte"
        android:textSize="20sp"
        android:layout_below="@+id/card1"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/card1"
        android:onClick="onClickGiveCard1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/giveCard2"
        android:text="@string/daCarte"
        android:textSize="20sp"
        android:layout_below="@+id/card2"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/card2"
        android:onClick="onClickGiveCard2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scor1"
        android:textSize="50sp"
        android:layout_below="@+id/giveCard1"
        android:layout_marginTop="20dp"
        android:text="26"
        android:layout_alignLeft="@+id/giveCard1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scor2"
        android:textSize="50sp"
        android:layout_below="@+id/giveCard1"
        android:layout_marginTop="20dp"
        android:text="26"
        android:layout_alignRight="@+id/giveCard2"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iale1"
        android:text="@string/iale"
        android:textSize="20sp"
        android:layout_below="@+id/scor2"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:layout_alignLeft="@+id/scor1"
        android:onClick="onClickIale1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iale2"
        android:text="@string/iale"
        android:textSize="20sp"
        android:layout_below="@+id/scor1"
        android:layout_alignRight="@+id/scor2"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:onClick="onClickIale2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/winner"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/iale1"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/returnButton"
        android:layout_below="@+id/winner"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:onClick="onClickReturnButton"
        android:text="@string/returnButton"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test"
        android:layout_toRightOf="@id/card1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test1"
        android:layout_toLeftOf="@+id/card2"/>
</RelativeLayout>